<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/page_home"
        android:enabled="true"
        android:icon="@drawable/baseline_home_24"
        android:title="Trang chủ"/>
    <item
        android:id="@+id/page_favourite"
        android:enabled="true"
        android:icon="@drawable/baseline_favorite_24"
        android:title="Yêu thích"/>
    <item
        android:id="@+id/page_cart_book"
        android:enabled="true"
        android:icon="@drawable/baseline_shopping_cart_24"
        android:title="Giỏ sách"/>
    <item
        android:id="@+id/page_information"
        android:enabled="true"
        android:icon="@drawable/baseline_person_24"
        android:title="Thông tin"/>
</menu>