...
                android:textSize="24dp"
                android:textStyle="bold" />
        </LinearLayout>


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rcvCartBook"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintHeight_max="480dp"
            tools:listitem="@layout/item_cart_book"
            android:visibility="visible">
        </androidx.recyclerview.widget.RecyclerView>
...
            android:visibility="gone"/>

        <TextView
            android:id="@+id/empty_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Giỏ sách trống"
            android:textSize="30sp"
            android:textStyle="bold"
            android:layout_gravity="center"
            android:textColor="@color/black"
            android:visibility="gone"/>

...
