...
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageButton
                    android:id="@+id/btn_details_back"
                    android:paddingTop="10dp"
                    android:layout_width="wrap_content"
                    android:src="@drawable/baseline_arrow_back_24"
                    android:backgroundTint="@android:color/transparent"
                    android:layout_height="wrap_content"
                    app:tint="@color/white" />
...
                        android:textColor="@color/tan" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

        <Button
            android:id="@+id/btn_addcart"
            android:layout_gravity="center_horizontal"
            android:translationZ="2dp"
            android:layout_marginTop="-20dp"
            android:theme="@style/Theme.Button"
            android:background="@drawable/bg_rounded"
            android:layout_width="wrap_content"
...
